--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,16 @@ spring:
     platform: org.hibernate.dialect.PostgreSQLDialect
     driver-class-name: org.postgresql.Driver
     initialization-mode: always
+
+  mvc:
+    throw-exception-if-no-handler-found: true
+
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  web:
+    resources:
+      add-mappings: false
